--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "react": "^18.3.1",
+    "react-datepicker": "^7.5.0",
+    "react-datetime-picker": "^6.0.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
