--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^16.18.114",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
+    "mui-file-input": "^6.0.0",
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
     "react-datetime-picker": "^6.0.1",
