--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@mui/icons-material": "^6.1.4",
     "@mui/material": "^6.1.4",
     "@mui/styles": "^6.1.4",
+    "@mui/x-date-pickers": "^7.22.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -15,6 +16,8 @@
     "@types/node": "^16.18.114",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
+    "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
     "mui-file-input": "^6.0.0",
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
@@ -53,5 +56,6 @@
   },
   "devDependencies": {
     "@types/react-scroll": "^1.8.10"
-  }
+  },
+  "proxy": "http://localhost:8080"
 }
